[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.6",
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
